# arprax-algorithms

./: .gitignore  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTING.md  LICENSE  README.md  demo_profiler.py  demo_visualizer.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_env.txt
.github/: release-drafter.yml
.github/workflows/: pipeline.yml  release-drafter.yml
docs/: CNAME  about-author.md  about.md  index.md  robots.txt
docs/algorithms/: index.md
docs/book/: ch01-anatomy.md  ch02-profiling.md  ch03-arrays.md  ch04-stacks.md  ch05-quadratic.md  ch06-divide.md  ch07-searching.md  ch08-trees.md  ch09-graphs.md  ch10-pathfinding.md  ch11-dynamic.md  ch12-greedy.md  ch13-pipeline.md  ch14-conclusion.md  index.md  intro.md
docs/bootcamp/: 00-setup.md  01-age-calculator.md  02-casino-game.md  03-task-manager.md  04-car-simulator.md  05-smart-home.md  06-data-pipeline.md  07-version-control.md
docs/javascripts/: mathjax.js.py
docs/playgrounds/: index.md  linkedlist-visualizer.md
docs/reference/: api.md
docs/stylesheets/: extra.css
examples/: DEMONSTRATIONS.md  demo_profiler.py  visuals.py
src/alnoms/: __init__.py
src/alnoms/algorithms/: pointers.py  sorting.py  strings.py
src/alnoms/algorithms/graph/: flow.py  mst.py  traversal.py
src/alnoms/algorithms/math/: reductions.py  simplex.py
src/alnoms/structures/: disjoint.py  graphs.py  linear.py  tries.py
src/alnoms/utils/: generators.py  io.py  profiler.py
src/arprax/algos/: __init__.py  profiler.py
src/arprax/algos/algorithms/: __init__.py  pointers.py  searching.py  sorting.py  strings.py
src/arprax/algos/algorithms/graph/: flow.py  mst.py  shortest_path.py  traversal.py
src/arprax/algos/algorithms/math/: reductions.py
src/arprax/algos/structures/: __init__.py  geometric.py  graphs.py  hashtable.py  linear.py  trees.py
src/arprax/algos/utils/: __init__.py  generators.py  io.py  visuals.py
src/arprax_algorithms/: __init__.py
src/arprax_algorithms/algorithms/: __init__.py  pointers.py  sorting.py
src/arprax_algorithms/profiler/: __init__.py  profiler.py
src/arprax_algorithms/structures/: __init__.py  linked_list.py
src/arprax_algorithms/utils/: __init__.py  generators.py
tests/: __init__.py  test_generators.py  test_profiler.py  test_structures.py
tests/manual/: test_visuals.py
tests/test_algos/: __init__.py  conftest.py  test_profiler.py
tests/test_algos/test_algorithms/: __init__.py  test_pointers.py  test_searching.py  test_sorting.py  test_strings.py
tests/test_algos/test_algorithms/test_graph/: test_flow.py  test_mst.py  test_shortest_path.py  test_traversal.py
tests/test_algos/test_algorithms/test_math/: test_reductions.py  test_simplex.py
tests/test_algos/test_structures/: __init__.py  test_disjoint.py  test_geometric.py  test_graphs.py  test_hashtable.py  test_linear.py  test_trees.py  test_tries.py
tests/test_algos/test_utils/: __init__.py  test_generators.py  test_io.py  test_profiler.py  test_visuals.py
tests/test_alnoms/: __init__.py  conftest.py
tests/test_alnoms/test_algorithms/: __init__.py  test_pointers.py  test_searching.py  test_sorting.py  test_strings.py
tests/test_alnoms/test_algorithms/test_graph/: test_flow.py  test_mst.py  test_shortest_path.py  test_traversal.py
tests/test_alnoms/test_algorithms/test_math/: test_reductions.py  test_simplex.py
tests/test_alnoms/test_structures/: __init__.py  test_disjoint.py  test_geometric.py  test_graphs.py  test_hashtable.py  test_linear.py  test_trees.py  test_tries.py
tests/test_alnoms/test_utils/: __init__.py  test_generators.py  test_io.py  test_profiler.py
