[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arprax-algorithms"
version = "0.1.0"
description = "Industrial-Grade Algorithms by Arprax Lab"
readme = "README.md"
authors = [{ name="Arprax Lab", email="lab@arprax.com" }]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["arprax_algorithms*"]

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]