[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alnoms"
version = "0.3.1"  # <--- Update this before your next release
description = "Industrial-Grade Algorithms by Arprax Lab"
dependencies = []
readme = "README.md"
authors = [{ name="Arprax Lab", email="lab@arprax.com" }]
requires-python = ">=3.9"
# Add keywords to help with Google/PyPI search visibility
keywords = ["algorithms", "sorting", "profiler", "industrial-cs", "arprax"]
# Add classifiers to show professionalism
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
]

# --- Namespace Configuration ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["arprax*"] # Finds arprax.algos and future pro/enterprise tiers
namespaces = true

# --- Pytest Configuration ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"] # Tells pytest to look in src/ for the arprax namespace
norecursedirs = ["tests/manual", "examples", ".*", "dist", "build", "venv"]
addopts = "--cov=arprax.algos --cov-report=term-missing --cov-branch" # Auto-triggers coverage

# --- Coverage Configuration (The Single Source of Truth) ---
[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]
branch = "main" # Monitoring the PUBLIC main branch for releases
upload_to_pypi = false  # pipeline handles this
build_command = "" # false: GitHub Action handles the build

[project.optional-dependencies]
dev = ["build", "twine", "pytest", "pytest-cov", "ruff"]
research = ["numpy>=1.26.0"]
visuals = ["matplotlib>=3.8.0", "networkx>=3.0"]

[project.urls]
"Homepage" = "https://algorithms.arprax.com/"
"Documentation" = "https://algorithms.arprax.com/reference/api/"
"Source" = "https://github.com/arprax/alnoms"
"Tracker" = "https://github.com/arprax/alnoms/issues"
"Arprax" = "https://www.arprax.com/"